--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           username: ewin2k
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
+          registry: GHCR
           repository: ewin2k/publish-packages/game
           tag_with_sha: true
